option java_outer_classname = "LCCANBUSDataQueryRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.CANBUSData";

import "core/proto/terminal/CANBUSData/CANBUSDataReport.proto";


message CANBUSDataQueryRes{
	required	int32	serialNumber		=1;
	optional	CANBUSDataReport	canData	=2;
}
